# PRG2-Exercises

./: .gitignore  CMakeLists.txt  README.md
1_Introduction/: CMakeLists.txt  Ex101.c  Ex102.c  Ex103.c  Ex104.c  Ex105.c  Ex106.c  Ex109.c  Ex110.c  Ex111.c
2_Pointeurs/: CMakeLists.txt  Ex201.c  Ex202.c
Demos/: 101_visibilite_macros.c  102_do_while(0).c  103_assert.c  104_compilation_conditionnelle.c  105_getchar_putchar.c  106_printf.c  107_printf_2.c  108_lecture_espaces_blancs_avec_scanf.c  109_scanf_avec_liste.c  110_scanf_avec_descripteur_i_et_lf.c  201_slide_14_solution_question.c  CMakeLists.txt
