add_executable(101_visibilite_macros 101_visibilite_macros.c)
add_executable(102_do_while 102_do_while\(0\).c)
add_executable(103_assert 103_assert.c)
add_executable(104_compilation_conditionnelle 104_compilation_conditionnelle.c)
add_executable(105_getchar_putchar 105_getchar_putchar.c)
add_executable(106_printf 106_printf.c)
add_executable(107_printf_2 107_printf_2.c)
add_executable(108_lecture_espaces_blancs_avec_scanf 108_lecture_espaces_blancs_avec_scanf.c)
add_executable(109_scanf_avec_liste 109_scanf_avec_liste.c)
add_executable(110_scanf_avec_descripteur_i_et_lf 110_scanf_avec_descripteur_i_et_lf.c)
add_executable(201_slide_14_solution_question 201_slide_14_solution_question.c)